# LMGNU

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-approval.yml  jekyll-gh-pages.yml  pypi.yml  static.yml
lmgnu/: __init__.py  core.py  logarithm.py  nn.py
